--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,23 @@
 {
-    "name": "automattic/underscores",
+    "name": "kundanbora/kundankb-portfolio-theme",
     "type": "wordpress-theme",
-    "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
+    "description": "This is my custom WordPress theme for my portfolio website at kundankb.com, showcasing my skills and projects.",
     "keywords": [
         "WordPress",
-        "Themes"
+        "Themes",
+        "Portfolio",
+        "TailwindCSS"
     ],
-    "homepage": "https://github.com/Automattic/_s",
+    "homepage": "https://kundankb.com",
     "license": "GPL-2.0-or-later",
     "authors": [
         {
-            "name": "Contributors",
-            "homepage": "https://github.com/Automattic/_s/graphs/contributors"
+            "name": "Kundan Bora",
+            "homepage": "https://kundankb.com"
         }
     ],
     "require": {
-        "php": ">=5.6"
+        "php": ">=7.4"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
@@ -26,10 +28,10 @@
     "scripts": {
         "lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
         "lint:php": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor .",
-        "make-pot": "wp i18n make-pot . languages/_s.pot"
+        "make-pot": "wp i18n make-pot . languages/kundankb-portfolio-theme.pot"
     },
     "support": {
-        "issues": "https://github.com/Automattic/_s/issues",
-        "source": "https://github.com/Automattic/_s"
+        "issues": "https://github.com/kundan333/portfolio/issues",
+        "source": "https://github.com/kundan333/portfolio"
     }
 }
