--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "underscores",
-  "version": "1.0.0",
-  "description": "Hi. I'm a starter theme called _s, or underscores, if you like. I'm a theme meant for hacking so don't use me as a Parent Theme. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for.",
-  "author": "Automattic Theme Team",
+  "name": "portfolio",
+  "version": "1.0.1",
+  "description": "This is a custom portfolio theme built for showcasing my work. It is based on the underscores starter theme.",
+  "author": "Your Name",
   "license": "GPL-2.0-or-later",
   "keywords": [
     "WordPress",
-    "Theme"
+    "Theme",
+    "Portfolio"
   ],
-  "homepage": "https://github.com/Automattic/_s#readme",
+  "homepage": "https://github.com/product-bundle-quantity",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Automattic/_s.git"
+    "url": "git+https://github.com/kundan333/product-bundle-quantity.git"
   },
   "bugs": {
-    "url": "https://github.com/Automattic/_s/issues"
+    "url": "https://github.com/kundan333/product-bundle-quantity/issues"
   },
   "devDependencies": {
     "@wordpress/scripts": "^19.2.2",
